@@ -95,9 +95,6 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
             logger.info("Sending signal with query {}", query);
             connection.execute(query);
         }
-        catch (Exception e) {
-            logger.warn("Failed to send signal", e);
-        }
     }
 
     protected void sendAdHocSnapshotSignal() throws SQLException {
@@ -133,25 +130,19 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
         }
     }
 
-    protected void sendPauseSignal() {
+    protected void sendPauseSignal() throws SQLException {
         try (JdbcConnection connection = databaseConnection()) {
             String query = String.format("INSERT INTO %s VALUES('test-pause', 'pause-snapshot', '')", signalTableName());
             logger.info("Sending pause signal with query {}", query);
             connection.execute(query);
         }
-        catch (Exception e) {
-            logger.warn("Failed to send pause signal", e);
-        }
     }
 
-    protected void sendResumeSignal() {
+    protected void sendResumeSignal() throws SQLException {
         try (JdbcConnection connection = databaseConnection()) {
             String query = String.format("INSERT INTO %s VALUES('test-resume', 'resume-snapshot', '')", signalTableName());
             logger.info("Sending resume signal with query {}", query);
             connection.execute(query);
-        }
-        catch (Exception e) {
-            logger.warn("Failed to send resume signal", e);
         }
     }
 
@@ -737,64 +728,20 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
     }
 
     @Test
-    @FixFor("DBZ-4271")
+    @FixFor({ "DBZ-4271", "debezium/dbz#2636" })
     public void removeNotYetCapturedCollectionFromInProgressIncrementalSnapshot() throws Exception {
-        final LogInterceptor interceptor = new LogInterceptor(AbstractIncrementalSnapshotChangeEventSource.class);
-
-        // We will use chunk size of 250, this gives us enough granularity with the incremental
-        // snapshot to have a couple round trips for the first table but enough table to trigger
-        // the removal of the second table before it starts being processed.
-        populateTables();
-        startConnector(x -> x.with(CommonConnectorConfig.INCREMENTAL_SNAPSHOT_CHUNK_SIZE, 250));
-
-        final List<String> collectionIds = tableDataCollectionIds();
-        assertThat(collectionIds).hasSize(2);
-
-        final List<String> tableNames = tableNames();
-        assertThat(tableNames).hasSize(2);
-
-        final List<String> topicNames = topicNames();
-        assertThat(topicNames).hasSize(2);
-
-        final String collectionIdToRemove = collectionIds.get(1);
-        final String tableToSnapshot = tableNames.get(0);
-        final String topicToConsume = topicNames.get(0);
-
-        // Send the start signal for all collections and stop for the second collection
-        sendAdHocSnapshotSignal(collectionIds.toArray(new String[0]));
-        sendAdHocSnapshotStopSignal(collectionIdToRemove);
-
-        // Wait until the stop has been processed, verifying it was removed from the snapshot.
-        Awaitility.await().atMost(getWaitDurationInSeconds())
-                .until(() -> interceptor.containsMessage("Removing '[" + collectionIdToRemove + "]' collections from incremental snapshot"));
-
-        try (JdbcConnection connection = databaseConnection()) {
-            connection.setAutoCommit(false);
-            for (int i = 0; i < ROW_COUNT; i++) {
-                connection.executeWithoutCommitting(String.format("INSERT INTO %s (%s, aa) VALUES (%s, %s)",
-                        tableToSnapshot,
-                        connection.quoteIdentifier(pkFieldName()),
-                        i + ROW_COUNT + 1,
-                        i + ROW_COUNT));
-            }
-            connection.commit();
-        }
-
-        final int expectedRecordCount = ROW_COUNT * 2;
-        final Map<Integer, Integer> dbChanges = consumeMixedWithIncrementalSnapshot(expectedRecordCount, topicToConsume);
-        for (int i = 0; i < expectedRecordCount; i++) {
-            assertThat(dbChanges).contains(entry(i + 1, i));
-        }
+        removeCapturedCollectionFromInProgressIncrementalSnapshot(1);
     }
 
     @Test
-    @FixFor("DBZ-4271")
+    @FixFor({ "DBZ-4271", "debezium/dbz#2636" })
     public void removeStartedCapturedCollectionFromInProgressIncrementalSnapshot() throws Exception {
+        removeCapturedCollectionFromInProgressIncrementalSnapshot(0);
+    }
+
+    protected void removeCapturedCollectionFromInProgressIncrementalSnapshot(int collectionIndexToRemove) throws Exception {
         final LogInterceptor interceptor = new LogInterceptor(AbstractIncrementalSnapshotChangeEventSource.class);
 
-        // We will use chunk size of 250, this gives us enough granularity with the incremental
-        // snapshot to have a couple round trips for the first table but enough table to trigger
-        // the removal of the second table before it starts being processed.
         populateTables();
         startConnector(x -> x.with(CommonConnectorConfig.INCREMENTAL_SNAPSHOT_CHUNK_SIZE, 250));
 
@@ -807,11 +754,11 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
         final List<String> topicNames = topicNames();
         assertThat(topicNames).hasSize(2);
 
-        final String collectionIdToRemove = collectionIds.get(0);
-        final String tableToSnapshot = tableNames.get(1);
-        final String topicToConsume = topicNames.get(1);
+        final String collectionIdToRemove = collectionIds.get(collectionIndexToRemove);
+        final String tableToSnapshot = tableNames.get(1 - collectionIndexToRemove);
+        final String topicToConsume = topicNames.get(1 - collectionIndexToRemove);
 
-        // Send the start signal for all collections and stop for the second collection
+        // Send the start signal for all collections and stop for the selected collection.
         sendAdHocSnapshotSignal(collectionIds.toArray(new String[0]));
         sendAdHocSnapshotStopSignal(collectionIdToRemove);
 
@@ -1123,7 +1070,6 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
     }
 
     @Test
-    // TODO seems slow try to speedup
     void testNotification() throws Exception {
 
         populateTable();
@@ -1140,9 +1086,12 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
         sendAdHocSnapshotSignal();
 
         List<SourceRecord> records = new ArrayList<>();
+        List<SourceRecord> notifications = new ArrayList<>();
         String topicName = topicName();
 
-        List<SourceRecord> notifications = new ArrayList<>();
+        // Consume a first batch while the snapshot is still running. The engine applies back-pressure
+        // (the enqueue buffer holds far fewer records than ROW_COUNT), so the snapshot cannot run to
+        // completion before the pause signal below is processed.
         consumeRecords(100, record -> {
             if (topicName.equalsIgnoreCase(record.topic())) {
                 records.add(record);
@@ -1152,28 +1101,30 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
             }
         });
 
+        // Pause the snapshot and wait until the PAUSED notification is actually emitted before resuming.
+        // pauseSnapshot()/resumeSnapshot() are no-ops unless the snapshot is running and in the matching
+        // paused/unpaused state, so resuming without confirming the pause took effect makes the PAUSED
+        // (and RESUMED) notifications flaky. Only the records already available are drained on each poll
+        // so that the engine's back-pressure keeps the snapshot in progress until the pause is applied,
+        // instead of consuming continuously and letting the snapshot run to completion first.
         sendPauseSignal();
-
-        consumeAvailableRecords(record -> {
-            if (topicName.equalsIgnoreCase(record.topic())) {
-                records.add(record);
-            }
-            if ("io.debezium.notification".equals(record.topic())) {
-                notifications.add(record);
-            }
-        });
+        Awaitility.await("incremental snapshot to be paused")
+                .atMost(getWaitDurationInSeconds())
+                .pollInterval(Duration.ofMillis(200))
+                .until(() -> {
+                    collectRecords(consumeAvailableRecordsByTopic(), topicName, records, notifications);
+                    return notifications.stream()
+                            .map(n -> (Struct) n.value())
+                            .anyMatch(v -> "PAUSED".equals(v.getString("type")));
+                });
 
         sendResumeSignal();
-
-        SourceRecords sourceRecords = consumeRecordsByTopicUntil(incrementalSnapshotCompleted());
-
-        records.addAll(sourceRecords.recordsForTopic(topicName()));
-        notifications.addAll(sourceRecords.recordsForTopic("io.debezium.notification"));
+        collectRecords(consumeRecordsByTopicUntil(incrementalSnapshotCompleted()), topicName, records, notifications);
 
         List<Integer> values = records.stream()
                 .map(r -> ((Struct) r.value()))
                 .map(getRecordValue())
-                .collect(Collectors.toList());
+                .toList();
 
         for (int i = 0; i < ROW_COUNT - 1; i++) {
             assertThat(values.get(i)).isEqualTo(i);
@@ -1293,6 +1244,12 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
     }
 
     protected int defaultIncrementalSnapshotChunkSize() {
+        // This value is consumed only by testNotification (connector config + last_processed_key
+        // assertion). It must be small: the pause signal has to be processed while the snapshot is still
+        // running (pauseSnapshot() is a no-op once every chunk is done), so a small chunk keeps enough
+        // chunks/windows in flight for the pause to land before the snapshot completes. A larger value
+        // leaves too little runway and the PAUSED/RESUMED notifications are never emitted. Connectors that
+        // need a different value override this method.
         return 1;
     }
 
@@ -1302,31 +1259,62 @@ public abstract class AbstractIncrementalSnapshotTest<T extends SourceConnector>
                 ((Struct) record.value()).getString("type").equals("COMPLETED");
     }
 
+    private void collectRecords(SourceRecords consumed, String topicName, List<SourceRecord> records, List<SourceRecord> notifications) {
+        List<SourceRecord> topicRecords = consumed.recordsForTopic(topicName);
+        if (topicRecords != null) {
+            records.addAll(topicRecords);
+        }
+        List<SourceRecord> notificationRecords = consumed.recordsForTopic("io.debezium.notification");
+        if (notificationRecords != null) {
+            notifications.addAll(notificationRecords);
+        }
+    }
+
     private void assertCorrectIncrementalSnapshotNotification(List<SourceRecord> notifications) {
         List<Struct> incrementalSnapshotNotification = notifications.stream().map(s -> ((Struct) s.value()))
                 .filter(s -> s.getString("aggregate_type").equals("Incremental Snapshot"))
+                .toList();
+
+        List<String> types = incrementalSnapshotNotification.stream()
+                .map(s -> s.getString("type"))
                 .collect(Collectors.toList());
 
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("STARTED"))).isTrue();
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("PAUSED"))).isTrue();
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("RESUMED"))).isTrue();
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("IN_PROGRESS"))).isTrue();
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("TABLE_SCAN_COMPLETED"))).isTrue();
-        assertThat(incrementalSnapshotNotification.stream().anyMatch(s -> s.getString("type").equals("COMPLETED"))).isTrue();
+        assertThat(types).as("incremental snapshot notification types")
+                .contains("STARTED", "PAUSED", "RESUMED", "IN_PROGRESS", "TABLE_SCAN_COMPLETED", "COMPLETED");
 
         assertThat(incrementalSnapshotNotification.stream().map(s -> s.getString("id"))
                 .distinct()
                 .collect(Collectors.toList())).contains("ad-hoc");
 
-        Struct inProgress = incrementalSnapshotNotification.stream().filter(s -> s.getString("type").equals("IN_PROGRESS")).findFirst().get();
-        assertThat(inProgress.getMap("additional_data"))
+        Struct inProgress = incrementalSnapshotNotification.stream()
+                .filter(s -> s.getString("type").equals("IN_PROGRESS"))
+                .findFirst()
+                .orElseThrow(() -> new AssertionError("No IN_PROGRESS notification found, got types: " + types));
+        Map<String, String> inProgressData = inProgress.getMap("additional_data");
+        assertThat(inProgressData)
                 .containsEntry("current_collection_in_progress", tableDataCollectionId())
                 .containsEntry("maximum_key", "1000")
-                .containsEntry("last_processed_key", String.valueOf(defaultIncrementalSnapshotChunkSize()));
+                .containsEntry("last_processed_key", String.valueOf(defaultIncrementalSnapshotChunkSize()))
+                .containsKey("total_rows")
+                .containsKey("total_chunks")
+                .containsKey("chunk_index");
 
-        Struct completed = incrementalSnapshotNotification.stream().filter(s -> s.getString("type").equals("TABLE_SCAN_COMPLETED")).findFirst().get();
+        // total_rows is a best-effort estimate that varies per connector, so we assert the derived progress
+        // fields are internally consistent rather than asserting an exact estimate value.
+        long totalRows = Long.parseLong(inProgressData.get("total_rows"));
+        long totalChunks = Long.parseLong(inProgressData.get("total_chunks"));
+        long chunkIndex = Long.parseLong(inProgressData.get("chunk_index"));
+        int chunkSize = defaultIncrementalSnapshotChunkSize();
+        assertThat(totalChunks).isEqualTo((totalRows + chunkSize - 1) / chunkSize);
+        assertThat(chunkIndex).isBetween(0L, totalChunks);
+
+        Struct completed = incrementalSnapshotNotification.stream()
+                .filter(s -> s.getString("type").equals("TABLE_SCAN_COMPLETED"))
+                .findFirst()
+                .orElseThrow(() -> new AssertionError("No TABLE_SCAN_COMPLETED notification found, got types: " + types));
         assertThat(completed.getMap("additional_data"))
-                .containsEntry("total_rows_scanned", "1000");
+                .containsEntry("total_rows_scanned", "1000")
+                .containsKey("total_rows");
     }
 
     protected void sendAdHocSnapshotSignalAndWait(String... collectionIds) throws Exception {
